# PikIA

./: .gitignore  README.md  pyproject.toml  requirements.txt
pikia/: core.py  custom_prompts.py  db.py  main.py  utils.py
pikia/assets/: header.txt
